tests/errors/unknown_type.b
fn greet(Foo f) {
}

fn main() {
}
